--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,17 @@ body{
                 align-items: center;
                 color: white;
                 background-color: #0188D1;
+                justify-content: space-around;
+                .arrow-left{
+                    cursor: pointer;
+                    font-weight: 900;
+                    font-size: 24px;
+                }
+                .arrow-right{
+                    cursor: pointer;
+                    font-weight: 900;
+                    font-size: 24px;
+                }
             }
             .saturday{
                 color: red;
@@ -52,7 +63,7 @@ body{
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
-                font-size: 16px;
+                font-size: 17px;
                 height: 40px;
             }
             .node{
@@ -73,7 +84,7 @@ body{
                     width: 100%;
                     background-color: rgb(0, 0, 0);
                     color: white;
-                    font-size: 14px;
+                    font-size: 15px;
                 }
             }
         }
