--- a/style.scss
+++ b/style.scss
@@ -32,16 +32,21 @@ body{
                 align-items: center;
                 color: white;
                 background-color: #0188D1;
-                justify-content: space-around;
-                .arrow-left{
-                    cursor: pointer;
-                    font-weight: 900;
-                    font-size: 24px;
+                justify-content: space-evenly;
+                .month-year{
+                    display: flex;
+                    align-items: center;
+                    //width: 160px;
+                    height: 40px;
+                    .year-text{
+                        margin-left: 5px;
+                    }
                 }
-                .arrow-right{
+                .img-arrow-left{
                     cursor: pointer;
-                    font-weight: 900;
-                    font-size: 24px;
+                }
+                .img-arrow-right{
+                    cursor: pointer;
                 }
             }
             .saturday{
@@ -65,6 +70,7 @@ body{
                 align-items: center;
                 font-size: 17px;
                 height: 40px;
+                border: 1px solid black;
             }
             .node{
                 display: flex;
