--- a/style.css
+++ b/style.css
@@ -84,15 +84,21 @@ body .main .days-grid .node img {
 }
 body .main .days-grid .node .morning-block {
   width: 100%;
+  height: 18px;
   background-color: rgb(20, 165, 223);
   color: white;
   font-size: 15px;
 }
 body .main .days-grid .node .night-block {
   width: 100%;
+  height: 18px;
   background-color: rgb(0, 0, 0);
   color: white;
   font-size: 15px;
+}
+body .main .active {
+  background-color: green;
+  color: white;
 }
 body .main .div-select {
   display: flex;
