--- a/style.scss
+++ b/style.scss
@@ -82,19 +82,25 @@ body{
                 }
                 .morning-block{
                     width: 100%;
+                    height: 18px;
                     background-color: rgb(20, 165, 223);
                     color: white;
                     font-size: 15px;
                 }
                 .night-block{
                     width: 100%;
+                    height: 18px;
                     background-color: rgb(0, 0, 0);
                     color: white;
                     font-size: 15px;
                 }
+                
             }
         }
-    
+        .active{
+            background-color: green;
+            color:white;
+        }
         .div-select{
             display: flex;
             justify-content: center;
