--- a/style.scss
+++ b/style.scss
@@ -97,8 +97,8 @@ body{
                 
             }
         }
-        .active{
-            background-color: green;
+        .highlightingToday{
+            background-color: rgb(71, 165, 16);
             color:white;
         }
         .div-select{
