--- a/style.css
+++ b/style.css
@@ -82,6 +82,13 @@ body .main .days-grid .node img {
   width: 17px;
   height: 17px;
 }
+body .main .days-grid .node .weekend-block {
+  width: 100%;
+  height: 18px;
+  background-color: rgb(49, 161, 39);
+  color: white;
+  font-size: 15px;
+}
 body .main .days-grid .node .morning-block {
   width: 100%;
   height: 18px;
@@ -97,7 +104,7 @@ body .main .days-grid .node .night-block {
   font-size: 15px;
 }
 body .main .highlightingToday {
-  background-color: rgb(71, 165, 16);
+  background-color: rgb(173, 174, 177);
   color: white;
 }
 body .main .div-select {
