--- a/style.css
+++ b/style.css
@@ -109,13 +109,26 @@ body .main .highlightingToday {
   background-color: rgb(173, 174, 177);
   color: white;
 }
-body .main .div-select {
+body .main .radio-block {
   display: flex;
-  justify-content: center;
-  margin: auto;
-  width: 150px;
-  margin-top: 5px;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 15px;
 }
-body .main .div-select .select {
+body .main .radio-block label {
+  display: flex;
+  align-items: center;
   cursor: pointer;
+}
+body .main .radio-block label input {
+  height: 15px;
+  width: 15px;
+  margin-right: 5px;
+  cursor: pointer;
+  color: pink;
+}
+body .main .radio-block label span {
+  border: 1px solid #d8dbdd;
+  padding: 2px 7px 2px 7px;
+  border-radius: 5px;
 }/*# sourceMappingURL=style.css.map */
