--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,6 @@ body{
             text-align: center;
             justify-content: center;
             grid-template-columns: 14% 14% 14% 14% 14% 15% 15% ;
-            margin: auto;
             gap:5px;
             .item{
                 display: flex;
@@ -50,18 +49,23 @@ body{
             }
             .saturday{
                 color: red;
+
             }
             .sunday{
                 color:red;
             } 
+        }
+        .total{
+            margin-top: 10px;
+            font-weight: 900;
+            text-align: center;
         }
         .days-grid{
             display: grid;
             width: 100%;
             text-align: center;
             justify-content: center;
-            grid-template-columns: 14% 14% 14% 14% 14% 15% 15% ;
-            margin: auto;
+            grid-template-columns: 14% 14% 14% 14% 14% 15% 15% ;      
             gap:5px;
             .emptyCell{
                 border: 0 solid black;
@@ -105,7 +109,6 @@ body{
             }
             
         }
-      
         .highlightingToday{
             background-color: rgb(173, 174, 177);
             color:white;
@@ -124,7 +127,6 @@ body{
                     width: 15px;
                     margin-right: 5px;
                     cursor: pointer;
-                    color: pink;
                 }
                 span{
                     border: 1px solid #d8dbdd;
